using System;
using System.Collections.Generic;
using System.Text;

namespace Step1.End
{
    public class PersonalName
    {
        public string FirstName { get; set; }
        public string MiddleInitial { get; set; }
        public string LastName { get; set; }
    }
}
